--- a/client_launcher.json
+++ b/client_launcher.json
@@ -4,7 +4,7 @@
   "checkCountDownloadsFiles": "1",
   "checkCountDownloadsFilesCurrent": "1",
   "checkReleasePackageName": "ir.denizimp.user",
-  "checkFilesGameURL": "https://mohamadmega.ir/MegaCity/f/",
+  "checkFilesGameURL": "https://mohamadmega.ir/MegaCity/f/1",
   "checkFilesGame1": "files.z01",
   "checkFilesGame2": "files.z02",
   "checkFilesGame3": "files.zip",
@@ -21,22 +21,22 @@
   "checkFilesGame14": "",
   "checkFilesGameArchive": "files.zip",
   "checkFilesGameArchiveVersion": "1",
-  "checkFilesClientURL": "https://mohamadmega.ir/MegaCity/client/",
+  "checkFilesClientURL": "https://mohamadmega.ir/MegaCity/client/1",
   "checkFilesClient1": "files_samp.zip",
   "checkFilesClient2": "",
   "checkFilesClient3": "",
   "checkFilesClientVersion": "2",
-  "checkFilesClientBetaURL": "https://mohamadmega.ir/MegaCity/client/",
+  "checkFilesClientBetaURL": "https://mohamadmega.ir/MegaCity/client/1",
   "checkFilesClientBeta": "files_samp.zip",
   "checkFilesClientBetaVersion": "1",
-  "checkFilesTexctureURL": "https://mohamadmega.ir/MegaCity/client/",
+  "checkFilesTexctureURL": "https://mohamadmega.ir/MegaCity/client/1",
   "checkFilesTexcture1": "files_texture.zip",
   "checkFilesTexcture2": "",
   "checkFilesTexcture3": "",
   "checkFilesTexcture4": "",
   "checkFilesTexcture5": "",
-  "checkFilesTexctureVersion": "10",
-  "checkFilesTexctureURLBeta": "https://mohamadmega.ir/MegaCity/client/update/",
+  "checkFilesTexctureVersion": "130",
+  "checkFilesTexctureURLBeta": "https://mohamadmega.ir/MegaCity/client/update/1",
   "checkFilesTexctureBeta": "files_texture.zip",
   "checkFilesPatchUpdateURL": "",
   "checkFilesPatchUpdate1": "",
